"changed a lot of handlebars"

--- a/views/layouts/main.handlebars
+++ b/views/layouts/main.handlebars
@@ -11,7 +11,7 @@
 
 <body>
   <header>
-    <h1>Welcome to the Four Seasons Museum</h1>
+    <h1>WELCOME TO SONGREX</h1>
   </header>
   <nav>
     <a href="/">Home</a>
@@ -22,10 +22,9 @@
     {{/if}}
   </nav>
   <main>
-    <aside>
-      <h2>Enjoy the galleries!</h2>
+    <aside>ENJOY THE SONGS!</h2>
     </aside>
-    <div class="gallery">
+    <div class="genre">
       {{{body}}}
     </div>
   </main>
