--- a/views/partials/song-details.handlebars
+++ b/views/partials/song-details.handlebars
@@ -1,10 +1,10 @@
 <section class="card">
-  <a href="/painting/{{id}}">
+  <a href="/genre/{{id}}">
     <header>{{title}}</header>
 
     <div class="card-body">
-      <img src="/images/{{filename}}" alt="{{description}}">
       <p>By: {{artist}}</p>
+      {{!-- add link to song --}}
     </div>
   </a>
 </section>
