--- a/views/song.handlebars
+++ b/views/song.handlebars
@@ -1,7 +1,7 @@
 <section class="genre">
-  <img src="/images/{{genre.image_name}}" alt="">
   <div class="song-details">
-    <h3>{{song-details.title}}</h3>
+    <h3>{{song.title}}</h3>
+    <p>Album: {{song.album}}</p>
     <p>By: {{song.artist}}</p>
   </div>
 </section>
