--- a/views/layouts/main.handlebars
+++ b/views/layouts/main.handlebars
@@ -4,9 +4,10 @@
 <head>
   <meta charset="utf-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>Museum</title>
-  <link rel="stylesheet" type="text/css" href="/css/jass.css">
-  <link rel="stylesheet" type="text/css" href="/css/style.css">
+  <title>Songrex</title>
+  <link rel="stylesheet" href="https://cdn.simplecss.org/simple.min.css">
+  {{!-- <link rel="stylesheet" type="text/css" href="/css/jass.css">
+  <link rel="stylesheet" type="text/css" href="/css/style.css"> --}}
 </head>
 
 <body>
