--- a/views/partials/song-details.handlebars
+++ b/views/partials/song-details.handlebars
@@ -1,5 +1,5 @@
 <section class="card">
-  <a href="/genre/{{id}}">
+  <a href="/song/{{id}}">
     <header>{{title}}</header>
 
     <div class="card-body">
