--- a/views/song.handlebars
+++ b/views/song.handlebars
@@ -3,5 +3,6 @@
     <h3>{{song.title}}</h3>
     <p>Album: {{song.album}}</p>
     <p>By: {{song.artist}}</p>
+    {{song.embed}}
   </div>
 </section>
