--- a/public/css/style.css
+++ b/public/css/style.css
@@ -38,15 +38,19 @@ header {
 main {
   display: flex;
   flex-wrap: wrap;
-  flex-grow: 1;
+  justify-content: center;
+  align-items: flex-start;
+  margin-top: 1rem;
 }
 
 aside {
-  flex: 0;
-  background-color: var(--tertiary);
-  padding: 80px;
-  text-align: left;
-  color: var(--light);
+  background-color: #f2f2f2;
+  color: #333;
+  padding: 1rem;
+  flex-basis: 25%;
+  margin-right: 1rem;
+  justify-content: center;
+  align-items: center;
 }
 
 nav {
@@ -66,7 +70,7 @@ nav a:hover {
   background-color: var(--dark);
 }
 
-.gallery {
+/* .gallery {
   flex: 4;
   background-color: #fff;
   padding: 50px;
@@ -74,6 +78,35 @@ nav a:hover {
   flex-flow: row wrap;
   justify-content: center;
   align-items: center;
+} */
+
+.genre {
+  flex-basis: 70%;
+  display: flex;
+  flex-wrap: wrap;
+  justify-content: space-between;
+}
+
+.genre-item {
+  width: calc(33.33% - 1rem);
+  margin-bottom: 1rem;
+  border: 1px solid #ccc;
+  padding: 1rem;
+  background-color: white;
+  box-shadow: 2px 2px 5px rgba(0, 0, 0, 0.1);
+}
+
+.genre-item h3 {
+  margin-top: 0;
+}
+
+#logout {
+  background-color: #333;
+  color: white;
+  border: none;
+  padding: 0.5rem 1rem;
+  border-radius: 5px;
+  cursor: pointer;
 }
 
 .btn-no-style {
