--- a/views/layouts/main.handlebars
+++ b/views/layouts/main.handlebars
@@ -5,9 +5,9 @@
   <meta charset="utf-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>Songrex</title>
-  <link rel="stylesheet" href="https://cdn.simplecss.org/simple.min.css">
-  {{!-- <link rel="stylesheet" type="text/css" href="/css/jass.css">
-  <link rel="stylesheet" type="text/css" href="/css/style.css"> --}}
+  {{!-- <link rel="stylesheet" href="https://cdn.simplecss.org/simple.min.css"> --}}
+  <link rel="stylesheet" type="text/css" href="/css/jass.css">
+  <link rel="stylesheet" type="text/css" href="/css/style.css">
 </head>
 
 <body>
