--- a/views/login.handlebars
+++ b/views/login.handlebars
@@ -29,6 +29,8 @@
       <div class="form-group">
         <label for="password-signup">Password:</label>
         <input class="form-input" type="password" id="password-signup" />
+        <p style="font-size: {{fontSize}}12px;">password must be at least 6 characters</p>
+      
       </div>
       <div class="form-group">
         <button class="btn btn-primary" type="submit">signup</button>
@@ -36,5 +38,6 @@
     </form>
   </div>
 </div>
+
 
 <script src="./js/login.js"></script>
