--- a/views/homepage.handlebars
+++ b/views/homepage.handlebars
@@ -1,4 +1,4 @@
-<h1>Genres</h1>
+<h1>Choose a Genre: </h1>
 <div class="genre-cards">
   {{#each genres}}
     <div class="gallery card-body painting">
