--- a/views/layouts/main.handlebars
+++ b/views/layouts/main.handlebars
@@ -23,7 +23,7 @@
     </aside> 
     <a href="/">Home</a>
     {{#if loggedIn}}
-    <button id="logout" class="btn-no-style">Logout</button>
+<a id="logout" href="#" class="btn-no-style">Logout</a>
     <a href="/input">Add new song!</a>
     {{else}}
     <a href="/login">Login</a>
