Fixed add songs issue, and input button links

--- a/views/input.handlebars
+++ b/views/input.handlebars
@@ -16,7 +16,7 @@
       </div>
       <div class="form-group">
         <label for="embed-input">Add your embed here:</label>
-        <input class="form-input" type="text" id="link-input" />
+        <input class="form-input" type="text" id="embed-input" />
       </div>
       <select name="genre-names" id="genre-names">
                     <option value="" disabled selected>Select the genre!</option>
