--- a/views/song.handlebars
+++ b/views/song.handlebars
@@ -4,5 +4,12 @@
     <p>Album: {{song.album}}</p>
     <p>By: {{song.artist}}</p>
     {{{ song.embed }}}
+    {{#if song.liked}}
+    <button value="{{song.id}}" class="btn btn-primary like-button">Liked!</button>
+    {{else}}
+     <button value="{{song.id}}" class="btn btn-primary like-button">Like Song!</button>
+     {{/if}}
   </div>
 </section>
+
+<script src="/js/like.js"></script>
