--- a/views/input.handlebars
+++ b/views/input.handlebars
@@ -1,6 +1,10 @@
 <div class="row justify-space-between-md">
   <div class="login-card">
-    <h2 class="page-title">Add Song</h2>
+    <h2 class="page-title">Wanna add a song?!</h2>
+     <div class="instructional-video">
+      <h3>Here's how to add the Embed:</h3>
+      <iframe width="560" height="315" src="/videos/howToEmbed.mp4" frameborder="0" allowfullscreen></iframe>
+    </div>
     <form class="form signup-form input-form">
       <div class="form-group">
         <label for="title-input">Song Title:</label>
