--- a/public/css/styles.css
+++ b/public/css/styles.css
@@ -5,40 +5,34 @@
   --quatrinary: #080702;
   --light: #e3e4e3;
   --dark: #182c23;
-  --error: rgb(228, 46, 1);
+  --error: #e42e01;
   --border-radius: 0.3rem;
 }
-
 body {
-  font-family:'Courier New', Courier, monospace;
+  font-family: 'Courier New', Courier, monospace;
   margin: 0;
   display: flex;
   flex-direction: column;
   min-height: 100vh;
   justify-content: flex-start;
-  background-color: var(--quatrinary);
+  background-color: #080702;
 }
-
 a {
-  color: var(--dark);
+  color: #182c23;
   text-decoration: none;
 }
-
 a:visited {
   color: inherit;
 }
-
 header {
   padding: 10px;
   text-align: center;
   /* background-image: url(../images/songrex.jpg); */
   /* background: url(../images/songrex.png); */
-  background-color: var(--primary);
-  color: var(--tertiary);
+  background-color: #EB1C64;
+  color: #2fda19;
   /* border-image: url(songrex.jpeg); */
 }
-
-
 main {
   display: flex;
   flex-wrap: wrap;
@@ -46,10 +40,9 @@ main {
   align-items: flex-start;
   margin-top: 1rem;
 }
-
 aside {
-  background-color: var(--secondary);
-  color: var(--tertiary);
+  background-color: #000000;
+  color: #2fda19;
   padding: 1rem;
   flex-basis: 100%;
   margin-right: 1rem;
@@ -57,29 +50,24 @@ aside {
   align-items: center;
   /* order: -1; */
 }
-
 button {
   cursor: pointer;
 }
-
 nav {
   display: flex;
-  background-color: var(--secondary);
-  color: var(--tertiary);
+  background-color: #000000;
+  color: #2fda19;
 }
-
 nav a {
-  color: var(--primary);
+  color: #EB1C64;
   padding: 14px 20px;
   text-decoration: none;
   text-align: center;
 }
-
 nav a:hover {
-  color: var(--primary);
-  background-color: var(--dark);
+  color: #EB1C64;
+  background-color: #182c23;
 }
-
 .gallery {
   flex: 4;
   /* background-color: url(../images/muzic.jpeg); */
@@ -90,22 +78,19 @@ nav a:hover {
   justify-content: center;
   align-items: center;
 }
-
 .gallery img {
   height: 300px;
   width: 400px;
 }
-
 .genre {
   flex-basis: 80%;
   display: flex;
   flex-wrap: wrap;
   justify-content: space-between;
-  color: var(--tertiary);
+  color: #2fda19;
   justify-content: center;
   align-items: center;
 }
-
 .genre-item {
   width: calc(33.33% - 1rem);
   margin-bottom: 1rem;
@@ -114,25 +99,20 @@ nav a:hover {
   background-color: white;
   box-shadow: 2px 2px 5px rgba(0, 0, 0, 0.1);
 }
-
 .genre-item h3 {
   margin-top: 0;
 }
-
 #logout {
-  background-color: var(--secondary);
-  color:var(--tertiary);
+  background-color: #000000;
+  color: #2fda19;
   border: none;
   padding: 0px 33px 33px 33px;
-  /* border-radius: 5px; */
   cursor: pointer;
 }
-
 #logout:hover {
-  color: var(--primary);
-  background-color: var(--dark);
+  color: #EB1C64;
+  background-color: #182c23;
 }
-
 .btn-no-style {
   background: none;
   border: none;
@@ -143,51 +123,58 @@ nav a:hover {
   transition: color 0.1s;
   margin-left: 16px;
 }
-
 img {
   max-width: 100%;
   height: auto;
 }
-
 .logo-container {
   display: flex;
   align-items: center;
   justify-content: center;
   padding: 10px;
 }
-
 .logo-container img {
   max-height: 50px;
   background-color: transparent;
 }
-
 .painting {
   width: 320px;
   background-color: white;
   box-shadow: 0 4px 8px 0 rgba(0, 0, 0, 0.2), 0 6px 20px 0 rgba(0, 0, 0, 0.19);
   margin: 10px;
 }
-
 .painting-details {
   text-align: center;
   padding: 5px 10px;
   font-weight: bold;
 }
-
 .song-details {
   margin: 3%;
 }
-
 /* CARDS */
 .card {
   margin: 20px;
   flex: 0 1 300px;
-  border: 7px double var(--dark);
-  border-radius: 10px;
-  background-color: var(--light);
-  color: var(--dark);
+  border: 7px double #182c23;
+  border-radius: 0.3rem;
+  background-color: #e3e4e3;
+  color: #182c23;
 }
-
+.card header {
+  color: #e3e4e3;
+  font-weight: bold;
+  text-transform: uppercase;
+  margin: 0;
+  background-color: #EB1C64;
+  padding: 0.625rem;
+  border-radius: calc(0.18rem - 1px) calc(0.18rem - 1px) 0 0;
+}
+.card-body {
+  font-size: 1.4rem;
+  text-align: center;
+  font-weight: bold;
+  padding: 10px;
+}
 .login-card {
   margin: 0 0 20px 0;
   flex: 0 0 var(--card-width);
@@ -202,24 +189,6 @@ img {
   display: flex;
   flex-direction: column;
 }
-
-.card header {
-  color: var(--light);
-  font-weight: bold;
-  text-transform: uppercase;
-  margin: 0;
-  background-color: var(--primary);
-  padding: 0.625rem;
-  border-radius: calc(0.18rem - 1px) calc(0.18rem - 1px) 0 0;
-}
-
-.card-body {
-  font-size: 1.4rem;
-  text-align: center;
-  font-weight: bold;
-  padding: 10px;
-}
-
 .genre-name {
   text-transform: uppercase;
   letter-spacing: 3px;
@@ -230,7 +199,6 @@ img {
   padding-right: 100px;
   padding-left: 100px;
 }
-
 .genre-cards {
   display: flex;
   flex-wrap: wrap;
@@ -244,11 +212,9 @@ img {
   border-radius: 10px;
   background-color: silver;
   color: var(--secondary);
-  flex-direction:column;
+  flex-direction: column;
   justify-content: space-between;
 }
-
-
 /* LAYOUT */
 .container {
   display: flex;
@@ -256,36 +222,29 @@ img {
   align-content: center;
   align-items: center;
 }
-
 @media screen and (max-width: 768px) {
   body {
-  font-size: 14px;
+    font-size: 14px;
   }
-  }
-  
-  @media screen and (max-width: 768px) {
-    main {
+}
+@media screen and (max-width: 768px) {
+  main {
     flex-direction: column;
-    }
-    
-    aside {
+  }
+  aside {
     order: 1;
     margin-right: 0;
     margin-top: 1rem;
-    }
-    }
-
-    @media screen and (max-width: 768px) {
-      .logo-container {
-      display: none;
-      }
-      }
-
-      @media screen and (max-width: 768px) {
-        .gallery img {
-        height: 200px;
-        width: 300px;
-        }
-        }
-        
-        
+  }
+}
+@media screen and (max-width: 768px) {
+  .logo-container {
+    display: none;
+  }
+}
+@media screen and (max-width: 768px) {
+  .gallery img {
+    height: 200px;
+    width: 300px;
+  }
+}
